Updated README and package.json keywords

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "keywords": [
     "webpack",
     "typescript",
+    "react",
+    "reactjs",
     "starter kit",
     "starter project",
     "boilerplate"
