--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run clean:test && nyc mocha",
     "test:watch": "mocha -w",
     "clean:build": "rm -rf ./dist",
-    "clean:test": "rm -rf ./coverage"
+    "clean:test": "rm -rf ./coverage",
+    "gen": "node ./scripts/create-component.js"
   },
   "keywords": [
     "webpack",
@@ -26,28 +27,62 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "4.0.1",
+    "@types/change-case": "2.3.1",
+    "@types/enzyme": "3.1.8",
+    "@types/enzyme-adapter-react-16": "1.0.1",
+    "@types/jsdom": "11.0.4",
     "@types/mocha": "2.2.41",
     "@types/node": "8.0.17",
     "@types/sinon": "2.3.3",
+    "@types/webpack-env": "1.13.5",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
     "chai": "4.1.0",
+    "change-case": "3.0.1",
+    "create-file": "1.0.1",
+    "cross-env": "5.1.3",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "html-webpack-plugin": "2.29.0",
+    "jsdom": "11.6.2",
     "mocha": "3.4.2",
     "mocha-typescript": "1.1.7",
     "nyc": "11.1.0",
+    "prompt": "1.0.0",
+    "react-dev-utils": "5.0.0",
     "sinon": "2.4.1",
     "source-map-support": "0.4.15",
     "ts-loader": "2.3.1",
     "ts-node": "3.3.0",
     "tslint": "5.9.1",
+    "tslint-eslint-rules": "4.1.1",
     "tslint-loader": "3.5.3",
+    "tslint-react": "3.4.0",
+    "tslint-react-recommended": "1.0.15",
     "typescript": "2.6.2",
     "uglifyjs-webpack-plugin": "0.4.6",
     "webpack": "3.3.0",
     "webpack-dev-server": "2.6.1"
+  },
+  "dependencies": {
+    "@types/history": "4.6.2",
+    "@types/react": "16.0.35",
+    "@types/react-dom": "16.0.3",
+    "@types/react-hot-loader": "3.0.5",
+    "@types/react-redux": "5.0.14",
+    "@types/react-router": "4.0.21",
+    "@types/react-router-redux": "5.0.11",
+    "@types/redux": "3.6.0",
+    "history": "4.7.2",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-hot-loader": "3.1.3",
+    "react-redux": "5.0.6",
+    "react-router": "4.2.0",
+    "react-router-redux": "5.0.0-alpha.9",
+    "redux": "3.7.2"
   }
 }
