--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test": "npm run clean:test && nyc mocha",
     "test:watch": "mocha -w",
     "clean:build": "rm -rf ./dist",
-    "clean:test": "rm -rf ./coverage",
-    "gen": "node ./scripts/create-component.js"
+    "clean:test": "rm -rf ./coverage"
   },
   "keywords": [
     "webpack",
@@ -27,7 +26,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "4.0.1",
-    "@types/change-case": "2.3.1",
     "@types/enzyme": "3.1.8",
     "@types/enzyme-adapter-react-16": "1.0.1",
     "@types/jsdom": "11.0.4",
@@ -41,8 +39,6 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
     "chai": "4.1.0",
-    "change-case": "3.0.1",
-    "create-file": "1.0.1",
     "cross-env": "5.1.3",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
@@ -51,7 +47,6 @@
     "mocha": "3.4.2",
     "mocha-typescript": "1.1.7",
     "nyc": "11.1.0",
-    "prompt": "1.0.0",
     "react-dev-utils": "5.0.0",
     "sinon": "2.4.1",
     "source-map-support": "0.4.15",
